Fixed tabs on mobile

--- a/client/scripts/views/pages/landing/landing_page_header.scss
+++ b/client/scripts/views/pages/landing/landing_page_header.scss
@@ -22,6 +22,15 @@ li.LandingPageHeaderLoginButton.ml-10.pt-2 {
   }
 }
 
+.HeaderLandingPage {
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 1rem;
+  width: 70%;
+  padding-right: 1rem;
+  padding-left: 1rem;
+}
+
 .header-hidden {
   top: -100px;
 }
